# simplelog

./: LICENSE.txt  README.html  README.md  Readmme.md
src/: CMakeLists.txt  main.c  simplelog.c  simplelog.cfg  simplelog.h  simplelog_config.h
src/c_test/: main.c
src/cpp_test/: main.cpp
src/cpp_test_direct/: main.cpp
src/linux/: Makefile  simplelog.cfg
